# RaspiProv

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
pi_ble_config/: __init__.py  __main__.py  agent.py  ble_server.py  network.py  protocol.py  service.py  ssh.py  wifi.py
scripts/: bootstrap.sh  deploy.sh  install.sh
systemd/: pi-ble-config.service
web/: README.md  app.js  ble.js  index.html  logger.js  serve.py  styles.css
