[build-system]
requires = ["setuptools>=64", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-ble-config"
version = "0.1.0"
description = "BLE-based headless configuration agent for Raspberry Pi (WiFi, SSH, network info)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "bluetoothProv" }]
dependencies = [
    "dbus-next>=0.2.3",
]

[project.scripts]
pi-ble-config = "pi_ble_config.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pi_ble_config*"]
